ui; added height and width to the button style as the android app ignores padding.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,6 +5,8 @@
     position: fixed !important;
     z-index: 12 !important;
     padding: 5px !important;
+    height: 60px !important;
+    width: 60px !important;
     bottom: 15px !important;
     right: 15px !important;
     text-align: center !important;
