--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,5 +10,73 @@
     bottom: 15px !important;
     right: 15px !important;
     text-align: center !important;
-    box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.26) !important;
+    /*box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.26) !important;*/
+}
+
+.round-icon {
+    border-radius: 50% !important;
+    z-index: 12 !important;
+    padding: 10px !important;
+    height: 50px !important;
+    width: 50px !important;
+    margin: 5px 0 !important;
+    color: #fff !important;  
+    /*box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.26) !important;*/
+}
+
+.round-icon.private {      
+    background: #ef473a !important;
+}
+
+.round-icon.work { 
+    background: #387ef5 !important;
+}
+
+.item.todo {
+    line-height: 29px !important;
+    font-size: 14pt;
+}
+
+.header-big {
+    height: 60px !important;
+    max-height: 60px !important;
+}
+
+button.button-icon-big {
+    min-height: 50px !important;
+}
+
+/*button.customIconSound i:before {
+    font-size: 52px !important; 
+}*/
+
+.menu {
+    background-color: #f7f7f7 !important;
+}
+
+.dark {
+  background-color: #f9f9f9 !important;
+  color: #333;
+}
+
+.dark-header {
+  background-color: #333 !important;
+  color: #f9f9f9;
+}
+
+/*Set the background to transparent for ion-item*/
+.dark .item {
+  background-color: transparent;
+  color: #333;
+}
+
+.dark .item-complex .item-content, .dark .item-radio .item-content {
+  background-color: transparent;
+}
+
+.color-todo-work {
+    color: #376CBB !important;
+}
+.color-todo-private {
+    color: #57A940 !important;
 }
